# Pylir

./: .clang-format  .clang-tidy  .gdbinit  .git-blame-ignore-revs  .gitignore  .pinned-llvm-revision  CITATION.cff  CMakeLists.txt  LICENSE.txt  Notes.md  README.md  Rationales.md  main.cpp
fuzzer/: CMakeLists.txt  Dictionary.txt  lexer_fuzzer.cpp  parser_fuzzer.cpp
src/pylir/: CMakeLists.txt
src/pylir/CodeGen/: Builtins.cpp  Builtins.def  BuiltinsImpl.cpp  CMakeLists.txt  CodeGen.cpp  CodeGen.hpp  CodeGenIntr.td  CodeGenOptions.hpp  CompilerBuiltins.cpp  GlobalDiscoverer.cpp  GlobalDiscoverer.hpp  PyBuilder.hpp
src/pylir/CodeGenNew/: CMakeLists.txt  CodeGenNew.cpp  CodeGenNew.hpp
src/pylir/Diagnostics/: CMakeLists.txt  DiagnosticMessages.hpp  Diagnostics.cpp  Diagnostics.hpp  DiagnosticsBuilder.cpp  DiagnosticsBuilder.hpp  DiagnosticsManager.cpp  DiagnosticsManager.hpp  Document.cpp  Document.hpp  LocationProvider.hpp
src/pylir/Dialect/: CMakeLists.txt  PylirAttributes.cpp  PylirAttributes.hpp  PylirBase.td  PylirDialect.cpp  PylirDialect.hpp  PylirDialect.td  PylirOps.cpp  PylirOps.hpp  PylirOps.td  PylirTypeObjects.cpp  PylirTypeObjects.hpp  PylirTypes.cpp  PylirTypes.hpp  PylirTypes.td
src/pylir/Interfaces/: Builtins.def  Builtins.hpp  BuiltinsModule.def  CompilerBuiltins.def  Slots.def
src/pylir/LLVM/: CMakeLists.txt  MarkSanitizersGCLeafs.cpp  MarkSanitizersGCLeafs.hpp  PlaceStatepoints.cpp  PlaceStatepoints.hpp  PylirGC.cpp  PylirGC.hpp
src/pylir/LLVM/Upstream/: RewriteStatepointsForGC.cpp
src/pylir/Lexer/: CMakeLists.txt  Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp
src/pylir/Main/: CMakeLists.txt  CommandLine.cpp  CommandLine.hpp  CompilerInvocation.cpp  CompilerInvocation.hpp  DarwinToolchain.cpp  DarwinToolchain.hpp  DiagnosticMessages.hpp  DiagnosticsVerifier.cpp  DiagnosticsVerifier.hpp  Distro.cpp  Distro.hpp  LLVMPostProcess.cpp  LLVMPostProcess.hpp  LinkerInvocation.cpp  LinkerInvocation.hpp  LinuxToolchain.cpp  LinuxToolchain.hpp  MSVCToolchain.cpp  MSVCToolchain.hpp  MinGWToolchain.cpp  MinGWToolchain.hpp  Opts.td  PylirMain.cpp  PylirMain.hpp  Toolchain.cpp  Toolchain.hpp  Version.cpp  Version.hpp
src/pylir/Optimizer/: CMakeLists.txt  Optimizer.cpp  Optimizer.hpp
src/pylir/Optimizer/Analysis/: AliasSetTracker.cpp  AliasSetTracker.hpp  BodySize.cpp  BodySize.hpp  CMakeLists.txt  EscapeAnalysis.cpp  EscapeAnalysis.hpp  InlineCost.cpp  InlineCost.hpp  LoopInfo.cpp  LoopInfo.hpp  MemorySSA.cpp  MemorySSA.hpp  MemorySSAIR.cpp  MemorySSAIR.hpp  MemorySSAIR.td
src/pylir/Optimizer/Conversion/: CABI.cpp  CABI.hpp  CMakeLists.txt  PassDetail.hpp  Passes.hpp  Passes.td  PylirToLLVM.cpp  PylirToLLVM.hpp  PylirToLLVMPatterns.td  WinX64.cpp  WinX64.hpp  X86_64.cpp  X86_64.hpp
src/pylir/Optimizer/Dialect/: CMakeLists.txt  PylirAttributes.hpp  PylirAttributes.td  PylirBase.td  PylirDialect.cpp  PylirDialect.hpp  PylirOps.cpp  PylirOps.hpp  PylirOps.td  PylirTypeObjects.cpp  PylirTypeObjects.hpp  PylirTypes.hpp  PylirTypes.td
src/pylir/Optimizer/ExternalModels/: CMakeLists.txt  ExternalModels.cpp  ExternalModels.hpp
src/pylir/Optimizer/Interfaces/: AttrVerifyInterface.cpp  AttrVerifyInterface.hpp  AttrVerifyInterface.td  CMakeLists.txt  CaptureInterface.cpp  CaptureInterface.hpp  CaptureInterface.td  ConditionalBranchInterface.cpp  ConditionalBranchInterface.hpp  ConditionalBranchInterface.td  DialectCostInterface.hpp  DialectImplicationPatternsInterface.hpp  DialectInlineCostInterface.hpp  DialectUndefInterface.hpp  MemoryFoldInterface.cpp  MemoryFoldInterface.hpp  MemoryFoldInterface.td  SROAInterfaces.cpp  SROAInterfaces.hpp  SROAInterfaces.td
src/pylir/Optimizer/Linker/: CMakeLists.txt  Linker.cpp  Linker.hpp
src/pylir/Optimizer/Models/: CMakeLists.txt  ControlFlowInlineCostModel.cpp  ControlFlowInlineCostModel.hpp
src/pylir/Optimizer/PylirHIR/: CMakeLists.txt
src/pylir/Optimizer/PylirMem/: CMakeLists.txt
src/pylir/Optimizer/PylirPy/: CMakeLists.txt
src/pylir/Optimizer/Transforms/: CMakeLists.txt  ConditionalsImplications.cpp  DeadCodeElimination.cpp  FixpointPass.cpp  LoadForwardingPass.cpp  PassDetail.hpp  Passes.hpp  Passes.td  SROA.cpp
src/pylir/Optimizer/Util/: OpVariableBase.td  TablegenUtil.td
src/pylir/Parser/: CMakeLists.txt  Dumper.cpp  Dumper.hpp  Features.def  Parser.cpp  Parser.hpp  ParserCompounds.cpp  ParserExpressions.cpp  ParserStatements.cpp  SemanticAnalysis.cpp  SemanticAnalysis.hpp  Syntax.cpp  Syntax.hpp  Visitor.cpp  Visitor.hpp
src/pylir/Runtime/: .clang-tidy  API.cpp  API.hpp  Builtins.hpp  CMakeLists.txt  ExceptionHandling.cpp  GCInterface.hpp  Globals.cpp  Globals.hpp  Objects.cpp  Objects.hpp  Pages.cpp  Pages.hpp  Pylir.h  PylirCPP.hpp  PylirGC.cpp  PylirGC.hpp  PylirInteger.cpp  PylirRuntimeMain.cpp  PylirString.cpp  Stack.cpp  Stack.hpp  StackWalker.cpp  Support.cpp  Support.hpp  SysModule.cpp
src/pylir/Support/: AbstractIntrusiveVariant.hpp  BigInt.cpp  BigInt.hpp  BufferComponent.hpp  CMakeLists.txt  Endian.hpp  Functional.hpp  HashTable.hpp  LazyCacheIterator.hpp  Macros.hpp  Text.cpp  Text.hpp  TextData.cpp  Util.hpp  ValueReset.hpp  Variant.hpp
tools/pylir-opt/: CMakeLists.txt  Passes.hpp  Passes.td  TestAddChange.cpp  TestAliasSetTracker.cpp  TestDialect.cpp  TestDialect.hpp  TestDialect.td  TestEscapeAnalysis.cpp  TestHelloWorld.cpp  TestInlineAll.cpp  TestInlinerInterface.cpp  TestLinker.cpp  TestLoopInfo.cpp  TestMemorySSA.cpp  TestTypeFlow.cpp  main.cpp
tools/pylir-reduce/: CMakeLists.txt  main.cpp
tools/pylir-translate/: CMakeLists.txt  main.cpp
unittests/pylir/: CMakeLists.txt
unittests/pylir/Diagnostics/: CMakeLists.txt  diagnostics_tests.cpp  document_tests.cpp  main.cpp
unittests/pylir/Lexer/: CMakeLists.txt  lexer_tests.cpp
unittests/pylir/Optimizer/: CMakeLists.txt  ir_tests.cpp
unittests/pylir/Parser/: CMakeLists.txt  main.cpp  parser_tests.cpp
unittests/pylir/Runtime/: CMakeLists.txt  empty.py  stackmap_reader.cpp  stackmap_source.ll.in
unittests/pylir/Support/: CMakeLists.txt  bigint_tests.cpp  hashtable_tests.cpp  text_tests.cpp  util_tests.cpp
(+747 files in other folders)
